5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1592_1802.log
== SUBMITION (2019-03-25 15:06:05) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt((5*D1))+(pi**D2/3)
print(Hp/Dano)
-- EXECUTION TIME:
0.159775
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
0.6197723509479465
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
0.9204139810632731
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
152.28740887080303
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:46:42) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=(sqrt((5*D1))+(pi**D2/3))//10
print(Dano)
print(Hp-Dano)
-- EXECUTION TIME:
0.170569
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
32.0
168.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
32.0
268.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
0.0
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:46:49) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt((5*D1))+(pi**D2/3)
print(Dano)
print(Hp-Dano)
-- OUTPUT:
322.6991325026012
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:46:52) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt((5*D1))+(pi**D2/3)
print(Dano)
print(Hp-Dano)
-- EXECUTION TIME:
0.193905
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322.6991325026012
-122.69913250260117
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325.94029010015305
-25.94029010015305
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3.283265528696387
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:48:13) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt((5*D1))+(pi**D2/3)
print(Dano)
print(Hp-Dano)
-- OUTPUT:
322.6991325026012
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:48:40) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt((5*D1))+(pi**D2/3)
print(Dano)
print(Hp-Dano)
-- OUTPUT:
322.6991325026012
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:49:22) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt(5*D1)+(pi**D2/3)
-- OUTPUT:
322.6991325026012
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:49:44) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt(5*D1)+(pi**D2/3)
print(Hp-Dano)
-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:50:26) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt(5*D1)+(pi**D2/3)
print(int(Hp-Dano))
-- EXECUTION TIME:
0.170839
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:23:31) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**D2/3)
print(int(Hp-Dano))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:23:47) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**D2/3)
print(int(Hp-Dano))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:24:00) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**D2/3)
print(int(Hp-Dano))
-- EXECUTION TIME:
0.161247
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:24:25) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- EXECUTION TIME:
0.130476
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:24:28) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:24:44) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- EXECUTION TIME:
0.216488
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:27:35) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:30:24) 
-- CODE:

Hp=int(input())
D1=int(input())
D2=int(input())
from math import*
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:19:18) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:19:40) 
-- CODE:
from math import*
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=sqrt(5*D1)+(pi**(D2/3))
print(int(Hp-Dano))
-- EXECUTION TIME:
0.166376
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:23:06) 
-- CODE:
import math
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=((5*D1))**(0.5)+(pi**(D2/3))
print(int(Hp-Dano))
-- EXECUTION TIME:
0.207044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1802/main.py", line 5, in <module>
    Dano=((5*D1))**(0.5)+(pi**(D2/3))
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:23:09) 
-- CODE:
import math
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=((5*D1))**(0.5)+(pi**(D2/3))
print(int(Hp-Dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Dano=((5*D1))**(0.5)+(pi**(D2/3))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:24:48) 
-- CODE:
import math
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=((5*D1))**(0.5)+(math.pi**(D2/3))
resto= Hp-int(dano)
print(dano)
-- EXECUTION TIME:
0.15502
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1802/main.py", line 6, in <module>
    resto= Hp-int(dano)
NameError: name 'dano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:24:55) 
-- CODE:
import math
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=((5*D1))**(0.5)+(math.pi**(D2/3))
resto= Hp-int(dano)
print(resto)
-- EXECUTION TIME:
0.197489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1802/main.py", line 6, in <module>
    resto= Hp-int(dano)
NameError: name 'dano' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:26:54) 
-- CODE:
import math
Hp=int(input())
D1=int(input())
D2=int(input())
Dano=((5*D1))**(0.5)+(math.pi**(D2/3))
resto= Hp-int(Dano)
print(resto)
-- EXECUTION TIME:
0.23824
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
